# django-soapbox

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  install.rst  make.bat  overview.rst  spelling_wordlist.txt
soapbox/: admin.py  context_processors.py  models.py  runtests.py
soapbox/fixtures/: soapboxtest.json
soapbox/migrations/: 0001_initial.py  0002_is_global_default.py  0003_message_is_regex.py
soapbox/templatetags/: soapbox.py
soapbox/tests/: __init__.py  messages.py  tags.py  test_messages.py  test_tags.py  urls.py
soapbox/tests/templates/soapboxtest/: test_context_processor.html  test_fail_syntax.html
src/soapbox/: admin.py  context_processors.py  models.py  runtests.py
src/soapbox/fixtures/: soapboxtest.json
src/soapbox/migrations/: 0001_initial.py  0002_is_global_default.py
src/soapbox/templatetags/: soapbox.py
tests/: test_messages.py  test_tags.py  urls.py
tests/templates/soapboxtest/: test_bad_variable.html  test_success.html
