[metadata]
license_file = LICENSE

[coverage:report]
fail_under = 100
exclude_lines = 
  pragma: no cover
  def __str__
  raise NotImplementedError

[coverage:run]
omit =
  */admin.py

[flake8]
exclude = locale,__pycache__,.pyc,templates
ignore =
  E203,
  E231,
  W503
max-complexity = 10
max-line-length = 88

[isort]
include_trailing_comma = True
known_first_party = soapbox
known_third_party = django
line_length = 88
lines_after_imports = 2
multi_line_output = 3