[metadata]
license_file = LICENSE

[coverage:report]
fail_under = 100
exclude_lines = 
  pragma: no cover
  def __str__
  raise NotImplementedError

[coverage:run]
omit =
  */admin.py

[flake8]
extend-ignore = E203
max-complexity = 10
max-line-length = 88

[isort]
known_first_party = soapbox
known_third_party = django
profile = black